--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Commerc"
         tools:targetApi="31">
         <activity
+            android:name=".acticity.ListItemsActivity"
+            android:exported="false" />
+        <activity
             android:name=".acticity.IntroActivity"
             android:exported="true">
             <intent-filter>
@@ -29,11 +32,13 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Commerc">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
